# NTC_Advanced_Systems_test_task

./: CMakeLists.txt  README.md  for_prog.md
task1/: CMakeLists.txt
task1/client/: Student.cpp  Student.h  ZmqClient.cpp  ZmqClient.h  main.cpp
task1/server/: Student.cpp  Student.h  StudentManager.cpp  StudentManager.h  StudentParser.cpp  StudentParser.h  ZmqServer.cpp  ZmqServer.h  main.cpp
task2/: CMakeLists.txt  CoordinateParser.cpp  CoordinateParser.h  CoordinateService.cpp  CoordinateService.h  HttpServer.cpp  HttpServer.h  main.cpp
